# C-http_server-with-DB

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  server.c
src/: config.c  config.h  count_handler.c  count_handler.h  db.c  db.h  file_request_handlers.c  file_request_handlers.h  main.c  request_handler.c  request_handler.h  request_utils.c  request_utils.h  server.c  server.h
